tests/paczka1/small_fuzzy/13044444.err
Error in line 1: bmZfJTFy6 S784 70,8
Error in line 4: bmZfJTFy6 A856 48,9
Error in line 15: BXwqP S784 80,1
